add mobile menu and fix z-index

--- a/index.html
+++ b/index.html
@@ -35,68 +35,101 @@
     <meta property="og:image" content="https://gadkiy.github.io/Examm/assets/images/siteimage.png">
 </head>
 <body>
-    <main>
-        <header>
-            <div class="container header">
-                <a class="header_logo logo" href="#">
-                    <svg>
-                        <use xlink:href="assets/images/svg/sprite.svg#page_logo"></use>
-                    </svg>
-                </a>
-                <nav>
-                    <ul class="header_list">
-                        <li class="header_list-item">
-                            <a class="scroll" href="#header_slider">
-                                <span class="round"></span><span>About us</span>
-                            </a>
-                        </li>
-                        <li class="header_list-item">
-                            <a class="scroll" href="#projects">
-                                <span class="round"></span><span>Projects</span>
-                            </a>
-                        </li>
-                        <li class="header_list-item">
-                            <a class="scroll" href="#news">
-                                <span class="round"></span><span>News</span>
-                            </a>
-                        </li>
-                        <li class="header_list-item">
-                            <a class="scroll" href="#contact">
-                                <span class="round"></span><span>Contact</span>
-                            </a>
-                        </li>
-                    </ul>
-                </nav>
-                <ul class="links">
-                    <li class="links-item" >
-                        <a href="https://www.facebook.com/" target="_blank" rel="noreferrer nofollow" title="facebook">
-                            <svg>
-                                <use xlink:href="assets/images/svg/sprite.svg#facebook"></use>
-                            </svg>
+
+    <div class="mobile_menu">
+            <div id="menu_close"></div>
+            <a class="header_logo logo" href="#">
+                <svg>
+                    <use xlink:href="assets/images/svg/sprite.svg#page_logo"></use>
+                </svg>
+            </a>
+            <ul class="header_list">
+                <li class="header_list-item">
+                    <a class="scroll" href="#header_slider">
+                        <span class="round"></span><span>About us</span>
+                    </a>
+                </li>
+                <li class="header_list-item">
+                    <a class="scroll" href="#projects">
+                        <span class="round"></span><span>Projects</span>
+                    </a>
+                </li>
+                <li class="header_list-item">
+                    <a class="scroll" href="#news">
+                        <span class="round"></span><span>News</span>
+                    </a>
+                </li>
+                <li class="header_list-item">
+                    <a class="scroll" href="#contact">
+                        <span class="round"></span><span>Contact</span>
+                    </a>
+                </li>
+            </ul>
+        </div>
+        <div id="mobile_shadow"></div>
+
+    <header>
+        <div class="container header">
+            <a class="header_logo logo" href="#">
+                <svg>
+                    <use xlink:href="assets/images/svg/sprite.svg#page_logo"></use>
+                </svg>
+            </a>
+            <nav>
+                <ul class="header_list">
+                    <li class="header_list-item">
+                        <a class="scroll" href="#header_slider">
+                            <span class="round"></span><span>About us</span>
                         </a>
                     </li>
-                    <li class="links-item" >
-                        <a href="https://twitter.com/?lang=ru" target="_blank" rel="noreferrer nofollow" title="twitter">
-                            <svg>
-                                <use xlink:href="assets/images/svg/sprite.svg#twitter"></use>
-                            </svg>
+                    <li class="header_list-item">
+                        <a class="scroll" href="#projects">
+                            <span class="round"></span><span>Projects</span>
                         </a>
                     </li>
-                    <li class="links-item">
-                        <a href="https://www.instagram.com/" target="_blank" rel="noreferrer nofollow" title="instagram">
-                            <svg>
-                                <use xlink:href="assets/images/svg/sprite.svg#instagram"></use>
-                            </svg>
+                    <li class="header_list-item">
+                        <a class="scroll" href="#news">
+                            <span class="round"></span><span>News</span>
                         </a>
-                    </li>                    
+                    </li>
+                    <li class="header_list-item">
+                        <a class="scroll" href="#contact">
+                            <span class="round"></span><span>Contact</span>
+                        </a>
+                    </li>
                 </ul>
-                <button class="hamburger hamburger--emphatic" type="button">
-                    <span class="hamburger-box">
-                        <span class="hamburger-inner"></span>
-                    </span>
-                </button>
-            </div>
-        </header>
+            </nav>
+            <ul class="links">
+                <li class="links-item" >
+                    <a href="https://www.facebook.com/" target="_blank" rel="noreferrer nofollow" title="facebook">
+                        <svg>
+                            <use xlink:href="assets/images/svg/sprite.svg#facebook"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="links-item" >
+                    <a href="https://twitter.com/?lang=ru" target="_blank" rel="noreferrer nofollow" title="twitter">
+                        <svg>
+                            <use xlink:href="assets/images/svg/sprite.svg#twitter"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="links-item">
+                    <a href="https://www.instagram.com/" target="_blank" rel="noreferrer nofollow" title="instagram">
+                        <svg>
+                            <use xlink:href="assets/images/svg/sprite.svg#instagram"></use>
+                        </svg>
+                    </a>
+                </li>                    
+            </ul>
+            <button class="hamburger hamburger--emphatic" type="button">
+                <span class="hamburger-box">
+                    <span class="hamburger-inner"></span>
+                </span>
+            </button>
+        </div>
+    </header>
+    <main>
         <section id="header_slider" class="header_slider">
             <ul id="lightSlider">
                 <li class="header_slider-item lazy-bg" data-src="assets/images/sliderbackground.png">
