Add send message to Telegram

--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@
                 </ul>
                 <form class="contact-card_form" action="#" method="POST" name="userInfo">
                     <input type="text" placeholder="Your Name" id="userName">
-                    <input type="email" name="userMail" id="userMail" placeholder="Email">
+                    <input type="text" name="userMail" id="userMail" placeholder="Email">
                     <button class="btn btn-submit" type="submit" id="sendUserInfo">SUBMIT</button>
                 </form>
             </div>
@@ -511,7 +511,7 @@
 
 
 
-
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="assets/js/jquery-3.6.0.min.js"></script>
     <script src="assets/js/plugins/dist/lightgallery.min.js"></script>
     <script src="assets/js/plugins/dist/plugins/zoom/lg-zoom.min.js"></script>
