fixed close button in mobile menu

--- a/index.html
+++ b/index.html
@@ -37,7 +37,11 @@
 <body>
 
     <div class="mobile_menu">
-            <div id="menu_close"></div>
+            <button class="hamburger hamburger--emphatic" type="button">
+                <span class="hamburger-box">
+                    <span class="hamburger-inner"></span>
+                </span>
+            </button>
             <a class="header_logo logo" href="#">
                 <svg>
                     <use xlink:href="assets/images/svg/sprite.svg#page_logo"></use>
